--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@
 body {
   font-family: "Poppins";
   line-height: 1.6;
-  background-color: #f8f8f8;
+  background-color: #141617;
+  color: #fffdf9;
 }
 
 .navbar {
-  background-color: #222;
-  color: white;
+  background-color: #111415;
+  color: #fffdf9;
   display: flex;
   justify-content: space-between;
   padding: 1rem 2rem;
@@ -45,7 +46,7 @@ body {
 }
 
 .hero {
-  background-color: #eee;
+  background-color: #1b1d1f;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -110,39 +111,11 @@ body {
 }
 
 .footer {
-  background-color: white;
+  background-color: #0f1112;
   text-align: center;
   padding: 2rem 1rem;
   margin-top: 2rem;
-  border-top: 1px solid #ddd;
-}
-
-.footer h3 {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-.footer a {
-  color: #333;
-  text-decoration: underline;
-}
-
-.footer p {
-  margin: 0.5rem 0;
-}
-
-.footer .copyright {
-  margin-top: 1rem;
-  font-size: 0.9rem;
-  color: #777;
-}
-
-.footer {
-  background-color: #f2f4f8;
-  padding: 2.5rem 1rem;
-  color: #333;
-  border-top: 2px solid #e0e0e0;
-  font-family: "Segoe UI", sans-serif;
+  border-top: 1px solid #363b3e;
 }
 
 .footer-container {
@@ -153,6 +126,27 @@ body {
   margin: auto;
   gap: 2rem;
 }
+
+.footer h3 {
+  font-size: 1.5rem;
+}
+
+.footer a {
+  color: #dad4cc;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+
+.footer .copyright {
+  margin-top: 1rem;
+  font-size: 0.9rem;
+  color: #777;
+}
+
 
 .footer-col {
   flex: 1 1 250px;
@@ -170,13 +164,6 @@ body {
   text-decoration: none;
 }
 
-.footer a {
-  text-decoration: none;
-}
-
-.footer a:hover {
-  text-decoration: underline;
-}
 
 .footer-bottom {
   text-align: center;
